Fixed z-index on user status bar. Added more parseints. Added check for undefined to NoodlerSummary. Added structure for API call methods.

--- a/src/User/User.css
+++ b/src/User/User.css
@@ -14,6 +14,7 @@ main#user_profile {
   right: 0px;
   text-align: center;
   height: 50px;
+  z-index: 1;
 }
 
 #user_profile #user_profile_intro {
